<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dish Order</string>
    
    <string name="dining">Dining</string>
    <string name="dining_chinese">Chinese Food</string>
    <string name="dining_european">European food</string>
    
    <string name="back">Back</string>
    <string name="hotdishs">Hot Dishs</string>
    <string name="cooldishs">Cool Dishs</string>
    <string name="stapledishs">Staple Dishs</string>
    <string name="snacksdishs">Snacks Dishs</string>
    <string name="drinks">drinks</string>
    <string name="title">Yinsen dian dan</string>
    <string name="order">Order</string>
    <string name="viewstyle">View Style</string>
    <string name="ordereddetail">Ordered Detail</string>
    <string name="enter">Enter</string>
    <string name="nodish">No dish</string>
    <string name="pricestr">Yuan</string>
     
    <string name="kouwei">kouwei</string>
    <string name="qingdan">qingdan</string>
    <string name="weila">weila</string>
    <string name="zhongla">zhongla</string>
    <string name="shaoxian">shaoxian</string>
    
    <string name="zuofa">zuofa</string>
    <string name="qingcao">qingcao</string>
    <string name="hongshao">hongshao</string>
    <string name="baochao">baochao</string>
    
    <string name="fenliang">fenliang</string>
    <string name="dafen">dafen</string>
    <string name="zhongfen">zhongfen</string>
    <string name="xiaofeng">xiaofeng</string>
    
    <string name="price">price</string>
    <string name="numberdish">number</string>
    <string name="orderdish">OK</string>
    
    <string name="mixture">Mixture</string>
    <string name="remarks">Remarks</string>
    <string name="mix1">Senior</string>
    <string name="mix2">Egg</string>
    <string name="mix0">Other</string>
    <string name="dishdetail">A very nice dish</string>
    <string name="example_name">example name</string>
    
    
    <string name="no">No</string>
    <string name="dishname">Dish Name</string>
    <string name="description">Description</string>
    <string name="del">No</string>
    <string name="totalprice">Total Price</string>
    <string name="ok">OK</string>
    
    <string name="option">Options</string>
    <string name="language">Language</string>
    <string name="orderedlist">Ordered List</string>
    <string name="waitormode">Waitor Mode</string>
    <string name="customermode">Exit Waitor Mode</string>
    <string name="structuretype">Structure Type</string>
    <string name="dishsearch">Search</string>
    <string name="searchhint">Input dish name</string>
    
    <string name="orderok">Order OK</string>
    <string name="payedok">Click to Pay</string>
    <string name="orderconfirmedok">Order confirmed</string>
    <string name="orderpayedok">Paid OK</string>
    <string name="statusunconfirmed">Unconfirmed</string>
    <string name="statusconfirmed">Confirmed</string>
    <string name="statuspayed">Paid</string>
    <string name="noorderitem">No ordered</string>
    <string name="tableno">Table No:</string>
    <string name="updatedata">Data update</string>
    
    <string name="updatecharsdata">Updata chars</string>
    <string name="updateimgdata">update imgs</string>
    <string name="download">Download</string>
    
    <string name="login">Login</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_text_entry">Waitor Login</string>
    <string name="alert_dialog_username">Username</string>
    <string name="alert_dialog_password">Password</string>
    <string name="login_error">Login Fail</string>
</resources>
