<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		
        <!-- top bar -->
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:background="@drawable/topbar_bk">
			
			<Button android:id="@+id/backbt"
			    android:layout_width="wrap_content"
	        	android:layout_height="40dp"
			    android:layout_marginLeft="0dp"
			    android:layout_gravity="center_vertical"
			    android:text="@string/back"
			    android:background="@drawable/toolbar_back_normal" />
			<Spinner android:id="@+id/morebt"
		        android:layout_width="wrap_content"
		        android:layout_height="40dp"
		        android:layout_gravity="center"
		        android:text="@string/option"
		        android:background="@drawable/toolbar_normal"/>
			<Button android:id="@+id/stypebt"
			    android:layout_width="wrap_content"
			    android:layout_height="40dp"
			    android:layout_marginRight="0dp"
			    android:layout_gravity="center_vertical"
			    android:text="@string/viewstyle"
			    android:background="@drawable/toolbar_normal" />
			
			
		</LinearLayout>
		
		<!-- label和list -->
		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			
		    <!-- label -->
			<ListView android:id="@+id/labelList"
			    android:minHeight="40dip"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:layout_weight="5"
				android:background="@drawable/labelbg"
				android:cacheColorHint="@android:color/transparent">
			</ListView>
		
			<!-- list -->
			<FrameLayout android:id="@+id/menuview"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
				android:layout_weight="1"> 
				<ListView android:id="@+id/dishList"
				    android:minHeight="40dip"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent"
					android:background="@drawable/background"
					android:cacheColorHint="@android:color/transparent">
				</ListView>
				
				<GridView
				    android:id="@+id/dishGrid"
					android:layout_width="fill_parent" 
					android:layout_height="fill_parent"
				    android:padding="10dp"
				    android:verticalSpacing="10dp"
				    android:horizontalSpacing="10dp"
				    android:numColumns="auto_fit"
				    android:columnWidth="120dp"
				    android:stretchMode="columnWidth"
				    android:gravity="center"
				    android:background="@drawable/background"
					android:cacheColorHint="@android:color/transparent">
				    
				</GridView>

								
			</FrameLayout>
		</LinearLayout>  
	</LinearLayout>
